<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black_300"
    tools:context=".activity.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sett_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sett_toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:title="@string/title_setting"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:id="@+id/container_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/sett_toolbar_container"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/provided_by" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provided_descr"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:contentDescription="src_provider"
            android:src="@drawable/openweathermap_logo" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_first_group"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_about"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/toogle_gr_temp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_c"
                android:tag="C"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/temp_c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_f"
                android:tag="F"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/temp_f"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_second_group"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_first_group"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/toogle_gr_wind_speed"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_ms"
                android:tag="C"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/ms" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_kmh"
                android:tag="F"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/kmh"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_third_group"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_second_group"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/toogle_gr_pressure"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_mnHa"
                android:tag="C"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/mnhg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degree_hPa"
                android:tag="F"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/hpa"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>